@@ -19,9 +19,9 @@ GetCEL=41
 PutCEL=53
 
 [DrawArea]
-Zoom=4
-ZoomLeft=33
-ZoomTop=66
+Zoom=3
+ZoomLeft=-12
+ZoomTop=30
 
 [BasicControls]
 Tool0=DRAW
@@ -43,7 +43,7 @@ ClearKeyColor=No
 UseAlpha=No
 
 [Settings]
-ShowSplash=Yes
+ShowSplash=No
 
 [Colors]
 Selected0=0
